--- a/src/components/Navbar/style.scss
+++ b/src/components/Navbar/style.scss
@@ -2,9 +2,8 @@
     height: 71px;
     background-color: black;
 
-    .shadowasd {
-        box-shadow: 0px 0px 22px grey;
-        
+    .shadowbox {
+        box-shadow: 0px 0px 22px grey;        
     }
 
     .head {
