--- a/src/pages/MyWorks/style.scss
+++ b/src/pages/MyWorks/style.scss
@@ -2,4 +2,14 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    div {
+        @media(max-width:425px) {
+            max-width: 250px;
+        }
+
+    }
+
+    @media(max-width:425px) {
+        justify-content: center;
+    }
 }
