--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,20 @@
 .App {
     background-color: black;
     color: white;
-    /* height: fit-content; */
+    background-image: url(./images/20220702_114613-removebg-preview.png);
+    background-size: 66%;
+    background-position: right;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+
+    
+}
+
+@media(max-width:425px){
+    .App {
+        background-size: 100%;
+        background-position: 100px;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+    }
 }
