--- a/src/pages/ContactMe/style.scss
+++ b/src/pages/ContactMe/style.scss
@@ -1,16 +1,16 @@
 .contact {
-    background-image: url(../../images/20220702_114613-removebg-preview.png);
-    background-size: 66%;
-    height: 100vh;
-    background-position: right;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+    // background-image: url(../../images/20220702_114613-removebg-preview.png);
+    // background-size: 66%;
+    // height: 100vh;
+    // background-position: right;
+    // background-repeat: no-repeat;
+    // background-attachment: fixed;
     color:grey;
 
-    @media(max-width:425px){
-        background-size: 100%;
-        background-position: 100px;
-        background-repeat: no-repeat;
-        background-attachment: fixed;        
-    }
+    // @media(max-width:425px){
+    //     background-size: 100%;
+    //     background-position: 100px;
+    //     background-repeat: no-repeat;
+    //     background-attachment: fixed;        
+    // }
 }
