--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -1,9 +1,9 @@
 .home {
-    background-image: url(../../images/20220702_114613-removebg-preview.png);
-    background-size: 66%;
-    background-position: right;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+    // background-image: url(../../images/20220702_114613-removebg-preview.png);
+    // background-size: 66%;
+    // background-position: right;
+    // background-repeat: no-repeat;
+    // background-attachment: fixed;
     color: grey;
 
     .home-content {
@@ -38,10 +38,10 @@
         }
     }
 
-    @media(max-width:425px){
-        background-size: 100%;
-        background-position: 100px;
-        background-repeat: no-repeat;
-        background-attachment: fixed;        
-    }
+    // @media(max-width:425px){
+    //     background-size: 100%;
+    //     background-position: 100px;
+    //     background-repeat: no-repeat;
+    //     // background-attachment: fixed;   
+    // }
 }
