--- a/src/works/MemoryGame/style.scss
+++ b/src/works/MemoryGame/style.scss
@@ -11,13 +11,22 @@
         border: 1px solid white;
         cursor: pointer;
         transition: filter .6s;
+
+        @media(max-width:425px) {
+            width: 95px;
+            height: 95px;
+        }
     }
 
     .disabled {
         pointer-events: none;
     }
+
     .filter {
         filter:grayscale(2)
     }
 
+    @media(max-width:425px) {
+        width: 390px;
+    }
 }
