--- a/src/features/todoApp/style.scss
+++ b/src/features/todoApp/style.scss
@@ -21,5 +21,15 @@
             align-items: center;
         }
     }
+
+    @media(max-width:425px) {
+        width: 380px;        
+    }
+    @media(max-width:375px) {
+        width: 360px;        
+    }
+    @media(max-width:320px) {
+        width: 310px;        
+    }
     
 }
