--- a/src/works/MemoryGame/style.scss
+++ b/src/works/MemoryGame/style.scss
@@ -13,8 +13,16 @@
         transition: filter .6s;
 
         @media(max-width:425px) {
-            width: 95px;
-            height: 95px;
+            width: 90px;
+            height: 90px;
+        }
+        @media(max-width:375px) {
+            width: 85px;
+            height: 85px;
+        }
+        @media(max-width:320px) {
+            width: 75px;
+            height: 75px;
         }
     }
 
@@ -27,6 +35,12 @@
     }
 
     @media(max-width:425px) {
-        width: 390px;
+        width: 370px;
+    }
+    @media(max-width:375px) {
+        width: 350px;
+    }
+    @media(max-width:320px) {
+        width: 310px;
     }
 }
