--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -32,5 +32,10 @@
                 }
             }
         }
+        .image {
+            img {
+                // width: 100%;
+            }
+        }
     }
 }
