I created a program that allows you to see the weather

--- a/src/pages/MyWorks/style.scss
+++ b/src/pages/MyWorks/style.scss
@@ -1,7 +1,7 @@
 .my-works {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content:space-between;
     
     div {
         @media(max-width:425px) {
