--- a/src/pages/MyWorks/style.scss
+++ b/src/pages/MyWorks/style.scss
@@ -1,16 +1,21 @@
 .my-works {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content:space-between;
+    .sss {
+        width: fit-content;
+        margin: 0 auto;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content:flex-start;
+
+        div {
+            @media(max-width:425px) {
+                max-width: 250px;
+            }
     
-    div {
+        }
+    
         @media(max-width:425px) {
-            max-width: 250px;
+            justify-content: center;
         }
 
-    }
-
-    @media(max-width:425px) {
-        justify-content: center;
     }
 }
