--- a/src/works/Calculator/style.scss
+++ b/src/works/Calculator/style.scss
@@ -36,6 +36,10 @@
             color: white; 
             background-color: black;
             border-radius: 9px;
+
+            &:active {
+                background-color: rgb(53, 51, 51);
+            }
         }
         .clear, .result {
             width: 144px;
