--- a/src/pages/About/style.scss
+++ b/src/pages/About/style.scss
@@ -1,5 +1,19 @@
 .about {
-    color:grey;
+    color:grey;    
+    background-image: url(../../images/20220702_114613-removebg-preview.png);
+    background-size: 66%;
+    background-position: right;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+
+    @media(max-width:425px){
+        .about {
+            background-size: 100%;
+            background-position: 100px;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+        }
+    }
 
     .container {
         
@@ -21,6 +35,27 @@
                 font-size: 18px;
                 color: orange;
                 text-decoration: none;         
+            }
+            .skils {
+                padding: 25px 0;
+
+                .cols {
+                    width: 33%;
+                    div {
+                        margin: 10px 0;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        flex-direction: column;
+                        
+                        .logo {
+                            width: 35px;
+                        }
+
+                    }
+                    
+                }
+
             }
 
             @media(max-width:425px){
