--- a/src/pages/MyWorks/style.scss
+++ b/src/pages/MyWorks/style.scss
@@ -1,5 +1,69 @@
 .my-works {
-    .sss {
+    .title {
+        font-family: sans-serif;
+        font-size: 40px;
+    }
+    .big-projects {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        a {
+        .big-projects-item {
+            position: relative;
+            margin: 50px;
+            overflow: hidden;
+            
+                img {
+                    width: 100%;
+                    max-width: 800px;
+                    transition: .5s;
+
+                    // &:hover {
+                    //     transform: scale(1.1);                        
+                    // }
+                }
+            
+
+            .big-projects-item-description {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background-color: rgba(0, 0, 0, 0.774);
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                text-align: center;
+                padding: 30px;
+                font-size: 20px;
+                color: #d2c1c1;
+                font-family: sans-serif;
+                opacity: 0;
+                transition: opacity .5s;
+                // display: none;
+
+                h3 {
+                    margin-bottom: 30px;
+                }
+                
+            }
+
+            &:hover {
+                .big-projects{
+                    &-item {
+                        &-description {
+                            // display: flex;
+                            opacity: 1;
+                        }
+                    }
+                }
+            }
+        }
+    }
+    }
+    .main_content {
         width: fit-content;
         margin: 0 auto;
         display: flex;
