--- a/src/works/Calculator/style.scss
+++ b/src/works/Calculator/style.scss
@@ -21,6 +21,7 @@
     .buttons {
         display: flex;
         flex-wrap: wrap;
+        user-select: none;
 
         button {
             width: 70px;
